--- a/index.html
+++ b/index.html
@@ -58,55 +58,50 @@
             <div class="item active">
                 <img src="/assets/media/ilustration/yaechrome_desk.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 01</h2>
+                    <p>arte digital</p>
+                    <h2>ilustración</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Exploro el arte digital creando ilustraciones personales con tableta Wacom, fusionando técnica y creatividad para dar vida a ideas únicas a través del color, la luz y el trazo digital.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_dragoncita_escritorio.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 02</h2>
+                    <p>posicionamiento web</p>
+                    <h2>Diseño web</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Diseño sitios web personalizados que combinan estética y funcionalidad, creando experiencias únicas y adaptadas a cada usuario mediante diseño responsivo y una identidad visual coherente.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_relax_desk.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 03</h2>
+                    <p>Identidad corporativa</p>
+                    <h2>Marca</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                       Desarrollo identidad corporativa que refleja la esencia de cada marca, creando logotipos, paletas y estilos visuales coherentes para fortalecer su presencia y conexión con el público.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/Yae_Samurai_desk.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 04</h2>
+                    <p>Información gráfica</p>
+                    <h2>Aprende de...</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                       Descubre qué es el diseño gráfico y cómo transforma ideas en mensajes visuales impactantes. Aprende sobre sus fundamentos y la importancia de una buena comunicación visual en cada proyecto.
                     </p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_prplC.jpg">
                 <div class="content">
-                    <p>design</p>
-                    <h2>Slider 05</h2>
+                    <p>programación</p>
+                    <h2>Lenguaje web</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                        Explora el mundo de los lenguajes de programación y aprende cómo dan vida a sitios web, aplicaciones y sistemas. Conoce sus bases y descubre cuál se adapta mejor a tus objetivos digitales.
                     </p>
                 </div>
             </div>
