mejoras en el menu responsive, eliminacion de problemas de bloqueo de menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
         
-            <!---bootstrap--->
+    <!---bootstrap--->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -36,7 +36,9 @@
             <li><a href="#">Contacto</a></li>
         </ul>
         <ul>
-            <li><a href="#">Groweb</a></li>
+            <li id="logo"><a href="#">
+                <img src="assets/media/logo/logo.png" width="190px" alt="">
+            </a></li>
             <li class="hideOnMobile"><a href="#">Inicio</a></li>
             <li class="hideOnMobile"><a href="#">Diseño</a></li>
             <li class="hideOnMobile"><a href="#">Nosotros</a></li>
@@ -106,41 +108,42 @@
                 </div>
             </div>
         </div>
-        <!-- button arrows -->
+
+        <!-- button flechas -->
         <div class="arrows">
-            <button id="prev"><</button>
-            <button id="next">></button>
+            <button id="prev"><i class="fa-solid fa-chevron-left"></i></button>
+            <button id="next"><i class="fa-solid fa-chevron-right"></i></button>
         </div>
         <!-- thumbnail -->
         <div class="thumbnail">
             <div class="item active">
                 <img src="assets/media/ilustration/yaechrome.jpg">
                 <div class="content">
-                    Name Slider
+                    ilustración
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_dragoncita.jpg">
                 <div class="content">
-                    Name Slider
+                    Web
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_relax.jpg">
                 <div class="content">
-                    Name Slider
+                    Marca
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/Yae_Samurai.jpg">
                 <div class="content">
-                    Name Slider
+                    Diseño
                 </div>
             </div>
             <div class="item">
                 <img src="assets/media/ilustration/yae_prplC.jpg">
                 <div class="content">
-                    Name Slider
+                    Programación
                 </div>
             </div>
         </div>
