creacion y mejora de informacion sobre el diseño de empresa en la pagina principal

--- a/index.html
+++ b/index.html
@@ -151,6 +151,39 @@
 
     <!--crea tu web-->
 
+    <div id="tituloWeb" class="container">
+        <div class="row">
+            <h1 class="">Crea tu web</h1>
+            <h3>Puedes tener tu propia página web en una semana</h3>
+        </div>
+    </div>
+
+    <div id="textoinfo" class="container">
+        <div class="row">
+            <div class="col">
+                <h4>Adaptabilidad</h4>
+                <p>Nuestros diseños web son completamente responsivos, lo que garantiza que tu sitio se vea y funcione a la perfección
+                    en cualquier dispositivo: computador, tablet o smartphone. Nos enfocamos en ofrecer una experiencia de navegación
+                    fluida y coherente, adaptando la estructura, el contenido y las imágenes para mantener la calidad visual en todo
+                    momento.</p>
+            </div>
+            <div class="col">
+                <h4>Velocidad y rendimiento</h4>
+                <p>Optimizamos cada línea de código y cada recurso visual para asegurar una carga rápida y eficiente. Sabemos que cada
+                    segundo cuenta, por eso trabajamos con las mejores prácticas de desarrollo y servidores confiables para garantizar
+                    un rendimiento superior. Tu sitio no solo será atractivo, sino también rápido, estable y seguro para tus visitantes.
+                </p>
+            </div>
+            <div class="col">
+                <h4>Creatividad profesional</h4>
+                <p>Combinamos diseño, estrategia y tecnología para crear sitios únicos que transmiten la esencia de tu marca. Nuestro
+                    enfoque une estética moderna con funcionalidad, logrando resultados visualmente impactantes y fáciles de usar. Cada
+                    proyecto es una oportunidad para destacar lo que hace especial a tu negocio, impulsando su presencia digital con
+                    propósito.</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 <script src="/assets/js/app.js"></script>
