agregar cards con sombreado y card negro con sombreado y centrado

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!--informacion de crear marca-->
 
-    <div id="infoempresa" class="container-fluid text-center pt-5">
+    <div id="infoempresa" class="container-fluid text-center">
         <div class="row">
             <div class="col-6 offset-3">
                 <h4>Renueva tu <b>imagen de empresa</b></h4>
@@ -198,6 +198,43 @@
                     presencia en la web tiene un valor igual de significativo. Por eso abordamos cada diseño con total seriedad y
                     enfoque estratégico, identificando los elementos visuales y conceptuales que mejor reflejan tu identidad corporativa
                     y la hacen destacar ante tu público.</h3>
+            </div>
+        </div>
+    </div>
+    <div id="card01" class="conteiner">
+        <div class="row">
+            <div class="col-6 offset-1">
+                <div class="card p-4">
+                    <div class="col-8">
+                        <h2>Posicionamiento web a tu <b>alcance</b> y deseos</h2>
+                        <p>Conectamos tu empresa con los motores de búsqueda de Google para que más personas descubran tu marca y sus servicios.
+                        Optimizamos tu presencia online para aumentar tu visibilidad y atraer nuevos clientes. ¡El alcance no tiene límites,
+                        los defines tú!</p>
+                    </div>                    
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card p-4">
+                    <div class="col-8">
+                        <h2>Posicionamiento web a tu <b>alcance</b> y deseos</h2>
+                        <p>Conectamos tu empresa con los motores de búsqueda de Google para que más personas descubran tu marca y sus servicios.
+                        Optimizamos tu presencia online para aumentar tu visibilidad y atraer nuevos clientes. ¡El alcance no tiene límites,
+                        los defines tú!</p>
+                    </div>                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="card02" class="container">
+        <div class="row">
+            <div class="col">
+                <div class="container text-center">
+                    <h1>Hacemos que su marca genere impacto y resuene en sus clientes</h1>
+                    <h4>Su sitio web es un reflejo de su marca y una puerta de entrada para construir relaciones sólidas y duraderas con sus
+                    clientes. En Nexbu, entendemos la importancia de generar un impacto duradero con sus productos y servicios. Confíe
+                    su nuevo sitio web a nuestros especialistas en desarrollo web.</h4>
+                </div>
+               
             </div>
         </div>
     </div>
